# Noema

./: .gitignore  Cargo.toml  MEMORY.md  Noema_TDD_v1.0.md  Noema_Work_Plan.md  Semantic_File_Manager_PRD_v1.0.md  dev-changelog.md
crates/noema-ai/: Cargo.toml
crates/noema-ai/src/: context.rs  lib.rs  llm.rs  openai.rs  types.rs
crates/noema-app/: Cargo.toml  tauri.conf.json
crates/noema-app/capabilities/: default.json
crates/noema-app/src/: main.rs
crates/noema-core/: Cargo.toml
crates/noema-core/src/: config.rs  db.rs  error.rs  events.rs  lib.rs  types.rs
crates/noema-fs/: Cargo.toml
crates/noema-fs/src/: highlight.rs  lib.rs  ops.rs  thumbs.rs  watcher.rs
crates/noema-index/: Cargo.toml
crates/noema-index/src/: chunker.rs  db.rs  embeddings.rs  lib.rs  parser.rs  pipeline.rs
crates/noema-search/: Cargo.toml
crates/noema-search/src/: engine.rs  lib.rs  query.rs  smart_folders.rs
diagrams/: 01_system_context.mmd  02_container.mmd  03_indexing_pipeline.mmd  04_search_pipeline.mmd  05_component_backend.mmd  06_sequence_search.mmd  07_sequence_fileops.mmd  08_data_model.mmd  09_deployment.mmd
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: CommandPalette.svelte  ConflictDialog.svelte  FileList.svelte  GlobalSearch.svelte  InfoPanel.svelte  PreviewPane.svelte  ProgressToast.svelte  SearchBar.svelte  Sidebar.svelte  TabBar.svelte  themeStore.ts
specs/: 00_overview.spec.md  01_core.spec.md  02_fs.spec.md  03_index.spec.md  04_search.spec.md  05_ai.spec.md  06_app_ipc.spec.md
