[workspace]
resolver = "2"
members = [
    "crates/noema-core",
    "crates/noema-fs",
    "crates/noema-index",
    "crates/noema-search",
    "crates/noema-ai",
    "crates/noema-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Noema Contributors"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
