[package]
name = "noema-ai"
version.workspace = true
edition.workspace = true

[dependencies]
noema-core = { path = "../noema-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
