[package]
name = "noema-ai"
version.workspace = true
edition.workspace = true

[dependencies]
noema-core = { path = "../noema-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
