[package]
name = "noema-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "noema"
path = "src/main.rs"

[dependencies]
noema-core = { path = "../noema-core" }
noema-fs = { path = "../noema-fs" }
noema-index = { path = "../noema-index" }
noema-search = { path = "../noema-search" }
noema-ai = { path = "../noema-ai" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
dirs = "6"
chrono = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
fs2 = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
