[package]
name = "noema-fs"
version.workspace = true
edition.workspace = true

[dependencies]
noema-core = { path = "../noema-core" }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
notify = "7"
notify-debouncer-full = "0.4"
trash = "5"
blake3 = "1"
globset = "0.4"
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
base64 = "0.22"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-fancy"] }

[dev-dependencies]
tempfile = "3.27.0"
