[package]
name = "noema-index"
version.workspace = true
edition.workspace = true

[dependencies]
noema-core = { path = "../noema-core" }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
crossbeam-queue = "0.3"
blake3 = "1"
infer = "0.16"
pulldown-cmark = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

[dev-dependencies]
tempfile = "3"
