[package]
name = "noema-search"
version.workspace = true
edition.workspace = true

[dependencies]
noema-core = { path = "../noema-core" }
noema-index = { path = "../noema-index" }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
