[package]
name = "noema-search"
version.workspace = true
edition.workspace = true

[dependencies]
noema-core = { path = "../noema-core" }
noema-index = { path = "../noema-index" }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
